--- a/Navigation.xcodeproj/xcshareddata/xcschemes/debug.xcscheme
+++ b/Navigation.xcodeproj/xcshareddata/xcschemes/debug.xcscheme
@@ -38,6 +38,16 @@
                ReferencedContainer = "container:Navigation.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "0ACBCCFF28C4CFC900567F79"
+               BuildableName = "NavigationTests.xctest"
+               BlueprintName = "NavigationTests"
+               ReferencedContainer = "container:Navigation.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
