--- a/Navigation/Info.plist
+++ b/Navigation/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Разрешите для использования Face ID</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Разрешите для получения Вашей геопозиции</string>
 	<key>NSAppTransportSecurity</key>
